#1083 Write column chunk encoding statistics
Without encoding_stats a reader cannot tell whether a chunk's dictionary
covers all of its values, so neither Hardwood's RowGroupDictionaryFilterSource
nor parquet-java's dictionary filter would prune a row group of a file this
writer produced. The writer picks one encoding per chunk at flush, so the
stats follow from that choice: a dictionary page and all data pages as
RLE_DICTIONARY, or all data pages under the one value encoding.

Hardwood's reader and writer share one page-type table, so the core tests
cannot catch a wrong mapping; the interop gate checks the field through
parquet-java, which decodes it independently and uses it to decide whether
its dictionary filter applies.